css/style.css
/* ... */
#Geneticistassist.stateHiring{
	background: rgba(0,166,41,0.4);
}

#Geneticistassist.stateHiring.thingColorCtrl{
	background: radial-gradient(black 45%, rgba(0,166,41,0.4) 60%);
}

#Geneticistassist.stateFiring{
	background: rgba(140,35,0,0.4);
}

#Geneticistassist.stateFiring.thingColorCtrl{
	background: radial-gradient(#444 45%, rgba(140,35,0,0.4) 60%);
}

#battleContainer {
    border: 2px solid white;
    background: rgba(121, 121, 123, 0.5);
    color: white;
    padding: 0.25vw;
    height: 100%;
    width: 100%;
	font-size: 1vw;
}

.fightBar{
	height: 1.4vw;
	font-size: 1.6vw !important;
	font-weight: bold;
}

.innerFightBar{
	font-size: 1.4vw !important;
	line-height: 1.4vw !important;
}

#battleHeadContainer {
	margin-bottom: 0.3vw;
}

#battleHead {
    text-align: center;
}

#goodGuyBar,
#badGuyBar {
    -webkit-transition: width .6s ease;
    transition: width .6s ease;
}

#actualBadName {
	display: inline-block;
	min-width: 8vw;
}

#gridRow {
    height: calc(99% - 140px);
	padding-left: 0;
	margin-left: 0;
}

#settingsRow {
    position: fixed;
    bottom: 0;
    background-color: #545353;
    width: 100%;
    left: 0;
	color: white;
	z-index: 7;
}

#settingsTable > tbody > tr > td {
	width: 9.1% !important;
	border: 1px solid black;
	display: table-cell !important;
	text-align: center;
}

.col-xs-off{
	display: none;
}

#extraMapBtns {
	padding-left: 0;
}

#extraMapBtns div:first-child{
	margin-top: 0;
}

.noTitle.title {
	display: none;
}

#goldConfig{
	color: white;
}

.settingsBtn {
    font-size: 1.25vw;
	border: 1px solid black !important;
	cursor: pointer;
	text-align: center;
	width: 100%;
}

.settingsBtnConfig {
	width: 83%;
	border-right: none !important;
}

.settingsBtnConfig + button { 
	width: 17%;
	background: gray;
	font-size: 1.25vw;
	border: 1px solid black ;
	border-left: none;
	cursor: pointer;
}

.settingsBtnConfig + button > span {
	top: .2vw !important;
}

#togglesaveAndExit.settingBtn0{
	background-color: black;
	color: red;
	border-color: white !important;
}

#togglesaveAndExit.settingBtn0:hover{
	background-color: #292929;
	border-color: #dedbdb !important;
}

.settingBtntrue, .settingBtn1{
	background-color: #5cb85c;
}

.settingBtntrue:hover, .settingBtn1:hover{
	background-color: #449d44;
	border-color: #398439;
}

.settingBtnfalse, .settingBtn0{
	background-color: #d9534f;
}

.settingBtnfalse:hover, .settingBtn0:hover{
	background-color: #d43f3a;
	border-color: #ac2925;
}

.settingBtn2, .btn-yellow, .colorYellow{
	background-color: yellow;
	color: black;
}

.settingBtn2:hover, .btn-yellow:hover, .colorYellow:hover{
	background-color: #e6e600;
	color: black;
	border-color: #c2c200;
}

.btn-disabled, .btn-disabled:hover, .colorDisabled, .colorDisabled:hover{
	color: white;
	background-color: grey;
	border-color:rgb(100, 100, 100);
}

.settingBtn3{
	background-color: #318696;
}

.settingBtn3:hover{
	background-color: #287280;
	border-color: #22606d;
}

.settingBtn4{
	background-color: #47008c;
}

.settingBtn4:hover{
	background-color: #1f003d;
	border-color: #3b0075;
}

.settingBtn5{
	background-color: #423705;
}

.settingBtn5:hover{
	background-color: #2e2604;
	border-color: #1c1702;
}

.settingBtn0, .settingBtn1, .settingBtn3, .settingBtn4 {
    color: white;
}

.optionContainer {
	display: inline-block;
	vertical-align: top;
	margin-left: 2vw;
	margin-right: 2vw;
	margin-bottom: 1vw;
	width: 15.5vw;
}

.maxCenter .optionContainer{
	margin: 0 2.5%;
	width: 45%;
}

#talentsEssenceTotal{
	line-height: 1em;
	font-size: 0.8em;
}

.optionContainer.settingFit12{
	margin-left: 0.58vw;
	margin-right: 0.58vw;
}

.optionItemDescription{
	padding-left: .5vw;
	padding-right: .5vw;
	font-size: 1vw;
}

#settingTitleBar{
	text-align: center;
	padding-top: 1.5vw;
	margin-bottom: 1.5vw;
}

#settingsHere{
	margin-bottom: 2vw;
}

#searchSettingsTitle{
	font-size: 1.5vw;
	margin: 0 3vw;
}

#searchSettings{
	color: black;
	font-size: 1.5vw;
	line-height: 1.5vw;
	width: 30%;
}

#settingSearchResults{
	height: 5.2vw;
}

#settingsTabs{
	margin-top: 0.75vw;
}

.settingTypeBtn{
	font-size: 1.5vw;
	line-height: 1.5vw;
	margin-top: 0.4vw;
	margin-bottom: 0.5vw;
	margin-right: 0;
}

#numTabs > ul > li > a {
	padding: 3px;
	border-radius: 0;
}

.buyTabsUl > li > a {
	border: 1px solid #ddd;
	border-radius: 8px 8px 0 0 !important;
}

.buyTab{
	font-size: 1vw;
}

#mapsHere, #voidMapsHere {
	height: calc(100vh - 31.5vw - 90px);
    overflow-y: auto;
	width: 100%;
}

#mapsHere.mapSize0{
	height: calc(100vh - 31.5vw + 3.25vw - 90px);
}

#mapsHere.mapSize2{
	height: calc(100vh - 31.5vw - 2.5vw - 90px);
}

#equipmentTitleDiv .lowPad, #buildingsTitleDiv .lowPad:nth-child(2) {
    cursor: default;
}



#settingsTable {
    width: 100%;
}

.pointer {
    cursor: pointer;
}

.inline {
    display: inline-block;
}

.progress {
    margin-bottom: 0;
}

#rightCol {
	height: calc(100vh - 18vw - 58px);
	padding-left: .25vw;
}

.ownedArea {
    font-size: 1.3em;
}

#leftMenu {
    height: 100%;
    padding: 10px;
    padding-top: 0;
}

.buyTitle {
    font-size: 1.5em;
    cursor: pointer;
}

.message {
    display: block;
    margin-top: 5px;
	font-size: .9vw;
	margin-bottom: 0;
}

#buildings {
    text-align: center;
}

#grid,
#mapGrid {
    width: 100%;
    height: 100%;
    color: black;
    background: rgba(255, 255, 255, 0.25);
    text-align: left;
	list-style: none;
	padding-left: 0;
	cursor: default;
}

.battleRow{
	list-style: none;
	padding-left: 0;
	margin-bottom: 0;
}

.battleCell {
    border: 1px solid black;
	display: inline-block;
	text-align: center;
}

#log {
    height: calc(100% - 2.1vw);
    width: 100%;
    overflow-y: scroll;
    padding-left: 5px;
    padding-top: 2px;
    padding-right: 5px;
}

#tooltipDiv, #tooltipDiv2 {
    width: 32.5vw;
    position: absolute;
    background: lightgrey;
    display: none;
    padding: 10px;
    border: 2px solid blue;
    font-size: 0.9vw;
	z-index: 7;
}

#tooltipDiv2{
	z-index: 6;
}
/* ... */

